--- a/project/package.json
+++ b/project/package.json
@@ -9,10 +9,10 @@
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.6.9",
-    "ejs": "~2.5.7",
+    "debug": "^2.6.9",
+    "ejs": "^2.5.9",
     "express": "^4.16.3",
-    "http-errors": "~1.6.2",
+    "http-errors": "^1.6.3",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "path": "^0.12.7"
