--- a/project/package.json
+++ b/project/package.json
@@ -13,6 +13,8 @@
     "ejs": "^2.5.9",
     "express": "^4.16.3",
     "http-errors": "^1.6.3",
+    "mongo": "^0.1.0",
+    "mongod": "^2.0.0",
     "mongoose": "^5.0.16",
     "morgan": "^1.9.0",
     "path": "^0.12.7"
